[project]
name = "pinarkive-sdk"
version = "1.0.0"
description = "Python SDK for the Pinarkive API"
authors = [
  {name = "ITCS VIP"},
  {name = "Joel_da"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests>=2.31.0"]

[project.urls]
Homepage = "https://github.com/pinarkive/pinarkive-sdk"
Repository = "https://github.com/pinarkive/pinarkive-sdk.git"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"